--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,12 @@ name = "rust-starter"
 version = "0.0.1"
 authors = ["Abid Omar <contact@omarabid.com>"]
 edition = "2018"
+repository = "https://github.com/omarabid/rust-starter"
+readme = "README.md"
+license = "MIT"
+keywords = ["cli", "starter"]
+description = """
+Rust Starter aims to provide high quality components to bootstrap your Rust CLI Project. It includes a battery of most used libraries; and defines a set of Rust best practices.
+"""
 
 [dependencies]
