refactor(lib): Change crate to binary

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,6 @@ description = """
 Rust Starter aims to provide high quality components to bootstrap your Rust CLI Project. It includes a battery of most used libraries; and defines a set of Rust best practices.
 """
 
+[workspace]
+
 [dependencies]
