--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2
 jobs:
   build:
     docker:
-        - image: circleci/rust:latest
+        - image: circleci/rust:1.34
     steps:
       - checkout
       - run:
