chore(profiles): add rust build profiles configuration

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,35 @@ Rust Starter aims to provide high quality components to bootstrap your Rust CLI 
 
 [dependencies]
 core = { path = "core" }
+
+[profile.dev]
+opt-level=0
+debug = true
+rpath = false
+lto = false
+debug-assertions = true
+codegen-units = 4
+
+[profile.release]
+opt-level=3
+debug = false
+rpath = false
+lto = true
+debug-assertions = false
+codegen-units = 1
+
+[profile.test]
+opt-level = 1
+debug = true
+rpath = false
+lto = false
+debug-assertions = true
+codegen-units = 4
+
+[profile.bench]
+opt-level = 3
+debug = false
+rpath = false
+lto = true
+debug-assertions = false
+codegen-units = 1
