--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,10 @@ utils = { path = "utils" }
 cli = { path = "cli"}
 core = { path = "core" }
 
+[dev-dependencies]
+assert_cmd = "0.11"
+predicates = "1.0.1"
+
 [profile.dev]
 opt-level=0
 debug = true
