--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ members = [
 utils = { path = "utils" }
 cli = { path = "cli"}
 core = { path = "core" }
+human-panic = "1.0.1"
 
 [dev-dependencies]
 assert_cmd = "0.11"
