--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 
 [dependencies]
 utils = { path = "../utils" }
+core = { path = "../core" }
 
 [dependencies.clap]
 version = "2.33.0"
