--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,4 +16,4 @@ jobs:
     - name: Build
       run: cargo build --verbose
     - name: Run tests
-      run: cargo test --all --no-run
+      run: cargo test --all
