--- a/.github/workflows/toc.yml
+++ b/.github/workflows/toc.yml
@@ -7,4 +7,4 @@ jobs:
     steps:
       - uses: technote-space/toc-generator@v2
         with:
-          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
