--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -1,16 +1,12 @@
 name: Security audit
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+on: [push, pull_request]
 
 jobs:
   audit:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions-rs/audit-check@issue-104
+      - uses: omarabid-forks/rs-audit-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
