imp(clap): upgrade to clap 3

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -10,9 +10,9 @@ utils = { path = "../utils" }
 core = { path = "../core" }
 
 [dependencies.clap]
-version = "2.33.0"
+version = "3.0.0-beta.2"
 features = ["yaml"]
 
 [dev-dependencies]
 assert_cmd = "1.0"
-predicates = "1.0.1"
+predicates = "1.0.5"
