--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -17,5 +17,5 @@ slog-async = "2.3.0"
 serde = { version = "1.0", features = ["derive"]}
 
 [dependencies.clap]
-version = "2.33.0"
+version = "3.0.0-beta.2"
 features = ["yaml"]
