--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -11,5 +11,5 @@ utils = { path = "../utils" }
 rand = "0.7"
 
 [dependencies.clap]
-version = "3.0.0-beta.2"
+version = "2.33.0"
 features = ["yaml"]
