--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -11,11 +11,11 @@ config = "0.10"
 lazy_static = "1.3"
 slog = "2.4.1"
 slog-syslog = "0.12.0"
-slog-term = "2.4.1"
+slog-term = "2.6.0"
 slog-scope = "4.2.0"
 slog-async = "2.3.0"
 serde = { version = "1.0", features = ["derive"]}
 
 [dependencies.clap]
-version = "2.33.0"
+version = "3.0.0-beta.2"
 features = ["yaml"]
