chore(docker): change docker image to rust-musl-builder

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,8 +1,9 @@
-FROM rust:1.43
+FROM ekidd/rust-musl-builder:latest as Builder
+
 
 # Copy project source code
-WORKDIR /usr/src/rustapp
 COPY . .
+ADD --chown=rust:rust . .
 
 # Print versions information
 RUN rustc --version
@@ -10,4 +11,9 @@ RUN cargo --version
 RUN rustup --version
 
 # Build the project
-RUN cargo build
+RUN cargo build --release
+
+FROM alpine:latest
+RUN apk --no-cache add ca-certificates
+COPY --from=builder /home/rust/src/target/x86_64-unknown-linux-musl/release/rust-starter /usr/local/bin/rust-starter
+CMD ["/usr/local/bin/rust-starter"]
