wip(logging): add stdlog crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ cli = { path = "cli"}
 core = { path = "core" }
 human-panic = "1.0.3"
 better-panic = "0.2.0"
+log = "0.4.11"
 
 [dev-dependencies]
 assert_cmd = "1.0.1"
