--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -14,6 +14,8 @@ slog-syslog = "0.12.0"
 slog-term = "2.6.0"
 slog-scope = "4.3.0"
 slog-async = "2.5.0"
+slog-stdlog = "4.1.0"
+log = "0.4.11"
 serde = { version = "1.0", features = ["derive"]}
 
 [dependencies.clap]
