imp(logging): add initial implementation for logging

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,8 @@ core = { path = "core" }
 human-panic = "1.0.3"
 better-panic = "0.2.0"
 log = "0.4.11"
+slog-scope = "4.3.0"
+slog-stdlog = "4.1.0"
 
 [dev-dependencies]
 assert_cmd = "1.0.1"
