--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -17,4 +17,9 @@ jobs:
     - name: Build the Docker image
       run: docker build --tag rust-starter:0.0.1 --file docker/Dockerfile .
     - run: docker tag rust-starter:0.0.1 ruststarter/rust-starter:0.0.1
+    - name: Docker authentication
+      env:
+        DOCKER_USERNAME: ${secrets.DOCKER_USERNAME}
+        DOCKER_TOKEN: ${secrets.DOCKER_TOKEN}
+      run: docker login -u $DOCKER_USERNAME -p $DOCKER_TOKEN
     - run: docker push ruststarter/rust-starter:0.0.1
