--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -21,11 +21,11 @@ jobs:
            echo "${{steps.vars.outputs.dockerhub_org}}"
     - run: mv docker/.dockerignore .dockerignore
     - name: Build the Docker image
-      run: docker build --tag rust-starter:0.0.1 --file docker/Dockerfile .
-    - run: docker tag rust-starter:0.0.1 ruststarter/rust-starter:0.0.1
+      run: docker build --tag ${{steps.vars.outputs.package_name}}:${{steps.vars.outputs.package_version}} --file docker/Dockerfile .
+    - run: docker tag ${{steps.vars.outputs.package_name}}:${{steps.vars.outputs.package_version}} ruststarter/${{steps.vars.outputs.package_name}}:${{steps.vars.outputs.package_version}}
     - name: Docker authentication
       env:
         DOCKER_USERNAME: ${secrets.DOCKER_USERNAME}
         DOCKER_TOKEN: ${secrets.DOCKER_TOKEN}
-      run: docker login -u $DOCKER_USERNAME -p $DOCKER_TOKEN
-    - run: docker push ruststarter/rust-starter:0.0.1
+      run: docker login -u "$DOCKER_USERNAME" -p "$DOCKER_TOKEN"
+    - run: docker push ruststarter/${{steps.vars.outputs.package_name}}:${{steps.vars.outputs.package_version}}
