--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -23,6 +23,10 @@ jobs:
     - name: Build the Docker image
       run: docker build --tag ${{steps.vars.outputs.package_name}}:${{steps.vars.outputs.package_version}} --file docker/Dockerfile .
     - run: docker tag ${{steps.vars.outputs.package_name}}:${{steps.vars.outputs.package_version}} ruststarter/${{steps.vars.outputs.package_name}}:${{steps.vars.outputs.package_version}}
+    - env:
+        DOCKER_USERNAME: ${secrets.DOCKER_USERNAME}
+        DOCKER_TOKEN: ${secrets.DOCKER_TOKEN}
+      run: echo $DOCKER_USERNAME - $DOCKER_TOKEN    
     - name: Docker authentication
       env:
         DOCKER_USERNAME: ${secrets.DOCKER_USERNAME}
